# device-ui

./: .gitignore  .gitleaksignore  CMakeLists.txt  README.md  extra_script.py  library.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
.github/workflows/: action-semantic-pull-request.yml  ci.yml  greetings.yml  main.yml  nightly.yml  trunk_check.yml
.trunk/: trunk.yaml
.trunk/configs/: .prettierrc.yaml
cmake/: Doctest.cmake  LVGL.cmake  LovyanGFX.cmake  Portduino.cmake  esp32_toolchain.cmake  libdeflate.cmake  nanopb.cmake  protobuf.cmake
docs/: input-policy-strategy-design.md
drivers/: Touch_CST820.cpp  Touch_CST820.h  lp5814.c  lp5814.h
include/: Base64.h  BatteryLevel.h  BluetoothClient.h  ButtonInputDriver.h  DeviceGUI.h  DeviceScreen.h  DisplayDriver.h  DisplayDriverConfig.h  DisplayDriverFactory.h  EncoderInputDriver.h  I2CKeyboardInputDriver.h  IClientBase.h  ILogEntry.h  InputDriver.h  KeyMatrixInputDriver.h  LGFXConfig.h  LGFXDriver.h  LGFX_4848S040.h  LGFX_ESP2432S022.h  LGFX_ESP2432S028R.h  LGFX_ESP2432S028RV1.h  LGFX_ESP2432S028RV2.h  LGFX_ESPILI9341XPT2046.h  LGFX_GENERIC.h  LGFX_HELTEC_TRACKER.h  LGFX_INDICATOR.h  LGFX_MAKERFABS480X480.h  LGFX_PICOMPUTER_S3.h  LGFX_PICO_TFT_240x135.h  LGFX_T_DECK.h  LGFX_T_HMI.h  LGFX_T_WATCH_S3.h  LGFX_UNPHONE.h  LGFX_WT_SC01PLUS.h  LGXFConfig.h  LVGLGraphics.h  LinuxInputDriver.h  LoRaPresets.h  LogMessage.h  LogRotate.h  (+23 more)
include/comms/: BluetoothClient.h  EthClient.h  IClientBase.h  LinuxSerialClient.h  MeshEnvelope.h  PacketClient.h  PacketServer.h  SerialClient.h  UARTClient.h  WLANClient.h  WebDAVServer.h
include/filesystem/: ArduinoFileSystem.h  IFileSystem.h  PosixFileSystem.h  SdCard.h  SdFatFileSystem.h
include/graphics/: DeviceScreen.h
include/graphics/LGFX/: LGFXConfig.h  LGFXDriver.h  LGFX_4848S040.h  LGFX_ELECROW70.h  LGFX_ELECROW_P4.h  LGFX_ELECROW_P4_50.h  LGFX_ELECROW_P4_70_90_101.h  LGFX_ESP32_S3_TOUCH.h  LGFX_ESPILI9341XPT2046.h  LGFX_GENERIC.h  LGFX_HELTEC_TRACKER.h  LGFX_HELTEC_V4_R8_TFT.h  LGFX_HELTEC_V4_TFT.h  LGFX_INDICATOR.h  LGFX_JC4827W543C.h  LGFX_PICOMPUTER_S3.h  LGFX_T_DECK.h  LGFX_T_DISPLAY_S3_PRO.h  LGFX_T_HMI.h  LGFX_T_LORA_PAGER.h  LGFX_T_WATCH_S3.h  LGFX_T_WATCH_ULTRA.h  LGFX_UNPHONE.h  LGFX_VISION_MASTER_T190.h  LGFX_WIO_TRACKER_L2.h  LGFX_WT_SC01PLUS.h
include/graphics/LVGL/: LVGLConfig.h  LVGLDriver.h  LVGLSpiBusDriver.h  LVGL_ST7789_Driver.h  LVGL_T_DECK.h
include/graphics/common/: BatteryLevel.h  LoRaPresets.h  MeshtasticView.h  ResponseHandler.h  Ringtones.h  SdCard.h  ViewController.h  ViewFactory.h
include/graphics/driver/: DisplayDeviceDriver.h  DisplayDriver.h  DisplayDriverConfig.h  DisplayDriverFactory.h  EINKDriver.h  FBDriver.h  LGFXDriver.h  LVGL_ST7789.h  OLEDDriver.h  SDLDriver.h  ScreenSleepController.h  TFTDriver.h  X11Driver.h
include/graphics/map/: FileSystemService.h  GeoPoint.h  LinuxFileSystemService.h  MapPanel.h  MapTile.h  MapTileSettings.h  OSMTiles.h  PMTileService.h  SDCardService.h  SDMMCCardService.h  SdFatService.h  TileProvider.h  TileService.h  URLService.h  pmtiles.hpp  stb_image.h
include/graphics/plugin/: ClockPlugin.h  DashboardPlugin.h  GfxPlugin.h  GroupsPlugin.h  MessagesPlugin.h  NodesPlugin.h  PluginRegistry.h  Plugins.h  ScrollMenuPlugin.h
include/input/: ButtonInputDriver.h  EncoderInputDriver.h  I2CKeyboardInputDriver.h  I2CKeyboardScanner.h  InputDriver.h  KeyMatrixInputDriver.h  LinuxInputDriver.h  RotaryEncoderInputDriver.h  RotaryInputDriver.h  ScreenSleepObserver.h  lv_t9_keyboard.h
include/util/: Colors.h  FileLoader.h  ILog.h  ILogEntry.h  LinuxHelper.h  LogMessage.h  LogRotate.h  PacketQueue.h  README.md  SdFatFileWrapper.h
locale/: .gitleaksignore  README.md  bg.yml  cs.yml  da.yml  de.yml  el.yml  en.yml  es.yml  fi.yml  fr.yml  it.yml  lv_i18n.c  lv_i18n.h  nl.yml  no.yml  pl.yml  pt.yml  ro.yml  ru.yml  se.yml  sl.yml  sr.yml  tr.yml  uk.yml  zh-CN.yml  zh.yml
maps/: README.md
maps/france/: Entire_France_Zoom_6-12_416MB.torrent
portduino/: Light_PWM.cpp  Light_PWM.h
resources/: montserrat_10.c  montserrat_12.c  montserrat_14.c  mouse_cursor_icon.c
source/: BatteryLevel.cpp  ButtonInputDriver.cpp  DeviceGUI.cpp  DeviceScreen.cpp  DisplayDriver.cpp  DisplayDriverConfig.cpp  DisplayDriverFactory.cpp  EncoderInputDriver.cpp  I2CKeyboardInputDriver.cpp  ILog.cpp  InputDriver.cpp  KeyMatrixInputDriver.cpp  LVGLGraphics.cpp  LinuxHelper.cpp  LinuxInputDriver.cpp  LoRaPresets.cpp  LogRotate.cpp  MeshtasticView.cpp  OLEDViewController.cpp  OLEDView_128x64.cpp  PacketClient.cpp  PacketServer.cpp  ResponseHandler.cpp  Ringtones.cpp  SharedQueue.cpp  TDeckInputDriver.cpp  TFTView_160x80.cpp  TFTView_240x240.cpp  TFTView_320x240.cpp  TFTView_480x320.cpp  Themes.cpp  ViewController.cpp  ViewFactory.cpp  X11Driver.cpp
source/comms/: WebDAVServer.cpp
source/filesystem/: ArduinoFileSystem.cpp  FileSystemFactory.cpp  PosixFileSystem.cpp  SdCard.cpp  SdFatFileSystem.cpp
source/graphics/: DeviceGUI.cpp  DeviceScreen.cpp
source/input/: ButtonInputDriver.cpp  EncoderInputDriver.cpp  I2CKeyboardInputDriver.cpp  I2CKeyboardScanner.cpp  InputDriver.cpp  KeyMatrixInputDriver.cpp  LinuxInputDriver.cpp  RotaryEncoderInputDriver.cpp  RotaryInputDriver.cpp  ScreenSleepObserver.cpp  lv_t9_keyboard.c
source/util/: ConvertPNG.c  FileLoader.cpp  ILog.cpp  LinuxHelper.cpp  LogRotate.cpp  SharedQueue.cpp  gunzip.cpp  readBytes.cpp  strcasestr.cpp
src/: DeviceGUI.cpp  DeviceScreen.cpp  MeshtasticView.cpp  OLEDViewController.cpp  OLEDView_128x64.cpp  TFTView_160x80.cpp  TFTView_240x240.cpp  TFTView_320x240.cpp  TFTView_480x320.cpp  ViewController.cpp  X11Driver.cpp  lib.cpp  mesh-pb-constants.cpp
studio/240x320/: TFTView_240x320.eez-project
studio/320x240/: TFT320x240.eez-project  T_Deck.eez-project  T_Deck.eez-project-ui-state
studio/480x222/: TFT480x222.eez-project
studio/open-sauce/: TFT320x240.eez-project  T_Deck.eez-project
tests/: test_GeoPoint.cpp  test_InputPolicy.cpp  test_MapPanel.cpp
(+108 files in other folders)
